material-overrides/assets/stylesheets/polkadot.css
/* ... */
.md-search-result__meta,
.md-search-result__list {
  background-color: var(--color-surface-secondary);
  color: var(--md-accent-fg-color);
}

.md-search-result__icon:after {
  background-color: var(--color-text-primary);
  -webkit-mask-image: var(--md-search-result-icon);
  mask-image: var(--md-search-result-icon);
}

.md-search__icon.md-icon[for="__search"] svg,
.md-header__button.md-icon[for="__search"] svg {
  height: 0.7rem;
  width: 0.7rem;
  fill: var(--color-text-primary);
}

[data-md-toggle="search"]:checked
  ~ .md-header
  .md-search__input:valid
  ~ .md-search__options
  > .md-icon
  svg {
  height: 0.9rem;
  width: 0.9rem;
  fill: var(--color-text-primary);
}

input.md-search__input::placeholder {
  color: var(--md-accent-fg-color) !important;
}

.md-search-result .md-typeset {
  color: var(--md-accent-fg-color);
}

.md-search-result__link:focus,
.md-search-result__link:hover,
.md-search-result__more > summary:focus > div,
.md-search-result__more > summary:hover > div {
  background-color: var(--color-surface);
}

.md-search-result .md-typeset h1 {
  font-weight: 600;
}

.md-search-result__item {
  box-shadow: 0 -0.05rem var(--color-border-strong);
}

@media screen and (max-width: 1536px) {
  .md-header__inner {
    padding: 0 var(--py-3);
  }
}

@media screen and (min-width: 60em) {
  .md-header__option[data-md-component="palette"] .md-icon,
  .md-header__tools {
    margin: 0.2rem 0;
  }

  .md-search__form {
    background-color: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
    height: 44px;
  }

  .md-search__form:hover {
    background-color: var(--color-surface-secondary);
    opacity: 0.8;
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__form {
    border-radius: var(--rounded-lg);
  }

  .md-search__icon[for="__search"] {
    height: 100%;
    top: 0;
    align-content: center;
  }

  .md-search__icon.md-icon svg.close {
    height: 0.58rem;
    width: 0.58rem;
  }

  .md-search__icon.md-icon svg path {
    fill: var(--md-default-fg-color);
  }

  .md-search__input {
    font-size: 0.7rem;
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__input {
    background: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__output {
    border-radius: var(--rounded-lg);
    top: 48px;
  }

  [data-md-toggle="search"]:checked
    ~ .md-header
    .md-header__option[data-md-component="palette"] {
    max-width: 100%;
    opacity: 1;
  }
}

@media screen and (max-width: 59.9844em) {
  .md-header__button.md-icon[for="__search"] {
    background-color: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
    padding: 0.75rem;
  }

  [data-md-toggle="search"] .md-search {
    display: none;
  }

  [data-md-toggle="search"]:checked .md-search {
    display: block;
  }

  .md-header__inner {
    gap: 0;
  }

  .md-header__button {
    margin-right: calc(0.2rem + var(--py-2));
  }

  .md-search__input,
  [data-md-toggle="search"]:checked ~ .md-header .md-search__form,
  .md-search__scrollwrap {
    background-color: var(--color-surface-secondary);
  }

  [dir="ltr"] .md-search__input {
    padding-left: 2.6rem;
    border-bottom: 1px solid var(--color-border-strong);
  }

  .md-search__icon.md-icon[for="__search"] svg {
    fill: var(--color-text-primary);
    height: 0.9rem;
    width: 0.9rem;
  }

  [dir="ltr"] .md-search__icon[for="__search"] {
    top: 0.8rem;
  }
}

/* --- Left navigation / TOC --- */
.md-nav__title {
  color: var(--color-text-primary);
  box-shadow: none;
}

.md-nav__link:hover,
a.md-nav__link--active,
div.md-nav__link--active,
label.md-nav__link--active,
.md-nav__link-wrapper.md-nav__item--active {
  background: var(--color-surface-secondary);
  border-radius: 6px;
}

/* Keep the highlight aligned to the left edge without shifting text */
[dir="ltr"] .md-nav__link:hover,
[dir="ltr"] a.md-nav__link--active,
[dir="ltr"] div.md-nav__link--active,
[dir="ltr"] .md-nav__link-wrapper.md-nav__item--active {
  margin-left: -1em;
  padding-left: 1em;
}

/* Nav items with icons in the title */
.md-nav__link > .nav-title.twemoji {
  display: inline;
  white-space: normal;
}

.md-nav__link .nav-title.twemoji svg {
  vertical-align: sub;
  margin: 0 0.5em 0 0;
  width: 1.3em;
}

.md-nav__link > .nav-title.twemoji > span svg {
  margin-left: 0;
}
/* ... */

